--- a/src/components/Questionbox.css
+++ b/src/components/Questionbox.css
@@ -1,46 +1,67 @@
-.main-container{
+*{
+    /* background-color: grey; */
+    
+}
+
+.nav{
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+
+.main{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.nav-button{
+    border-radius: 20px;
+    height: 45px;
+    width: 80px;
+}
+.subBody{
+    background-color: aliceblue;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    border: 2px solid black;
+    margin: 100px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10vw;
+    position: relative;
+    box-shadow: 1px 4px 10px rgb(128, 128, 217);
+
+
+    
+    
+}
+ul{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.down-btn{
+    display: flex;
+    gap: 10px;
     align-items: center;
     justify-content: center;
     text-align: center;
-    flex-direction: column;
-    height: 100%;
-    width: 80%;
-    background-color: palegreen;
-    margin-left: 10vw;
-    margin-top: 6vw;
-    padding-bottom: 60px;
+
+    
 }
 
 
 
-.div-1{
-    background-color: coral;
-    height: 100%;
-    width: 70%;
-    border-radius: 30%;
 
-}
-
-.buttons{
-    display: flex;
-    align-items: center;
-   justify-content: center;
-   gap: 65px;
-   margin-top: 1vw;
-}
-
-.options{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-   /* background-color: ; */
-    margin-top: 4vw;
-  
    
-} 
+
 li{
     display: grid;
     flex-direction: column;
@@ -48,10 +69,17 @@ li{
     align-items: center;
     text-align: center;
     background-color: antiquewhite;
-    width: 200px;
+    width: 330px;
     border-radius: 20px;
     height: 25px;
     border: 2px solid  palevioletred;
-    padding-bottom: -10px;
+    padding: 10px;
+    margin: 3px;
+    box-shadow: 1px 2px palevioletred;
     
+}
+.dbtn{
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 1px 2px black;
 }
